feat: add world and shader

--- a/Miner/Miner.vcxproj
+++ b/Miner/Miner.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Miner.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
