--- a/Miner/Miner.vcxproj
+++ b/Miner/Miner.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Miner.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="World.h" />
